Add more facts to node info

--- a/rundeck-puppetdb-nodes-plugin/plugin.yaml
+++ b/rundeck-puppetdb-nodes-plugin/plugin.yaml
@@ -23,16 +23,22 @@ providers:
                   required: true
                 - name: hostgroup
                   type: String
-                  title: hostgroup
+                  title: Hostgroup
                   description: "Foreman Hostgroup"
                   required: true
                 - name: username
                   type: String
-                  title: username
+                  title: Username
                   description: "User to connect to PuppetDB"
                   required: true
                 - name: keytab
                   type: String
-                  title: keytab
+                  title: Keytab
                   description: "Path to user's keytab to authenticate"
                   required: true
+                - name: factlist
+                  type: String
+                  title: Fact list
+                  description: "List of facts to retrieve for every node"
+                  required: true
+                  default: "is_virtuals"
