--- a/rundeck-puppetdb-nodes-plugin/plugin.yaml
+++ b/rundeck-puppetdb-nodes-plugin/plugin.yaml
@@ -1,10 +1,10 @@
 #yaml plugin metadata
 
 name: PuppetDB source
-version: 1.2
+version: 1.3
 rundeckPluginVersion: 1.0
 author: Daniel Fernandez (danielfr@cern.ch)
-date: 2016/02/25
+date: 2016/09/05
 providers:
         - name: rundeck-puppetdb-nodes
           service: ResourceModelSource
@@ -14,7 +14,7 @@ providers:
           plugin-type: script
           script-interpreter: /usr/bin/python
           script-file: rundeck_puppetdb_nodes.py
-          script-args: "-v --apiurl ${config.apiurl} --hostgroup ${config.hostgroup} --username ${config.username} --keytab ${config.keytab} --file ${config.file} --${config.mode} --factlist ${config.factlist}"
+          script-args: "-v --apiurl ${config.apiurl} --hostgroup ${config.hostgroup} --username ${config.username} --keytab ${config.keytab} --file ${config.file} --${config.mode} --factlist ${config.factlist} --taglist ${config.taglist}"
           config:
                 - name: apiurl
                   type: String
@@ -42,6 +42,12 @@ providers:
                   title: Fact list
                   description: "Space-separated list of facts to retrieve for every node"
                   default: "hostname ipaddress"
+                  required: false
+                - name: taglist
+                  type: String
+                  title: Tag list
+                  description: "Space-separated list of facts whose values(!) will be added as tags"
+                  default: ""
                   required: false
                 - name: mode
                   type: Select
