--- a/rundeck-puppetdb-nodes-plugin/plugin.yaml
+++ b/rundeck-puppetdb-nodes-plugin/plugin.yaml
@@ -62,4 +62,4 @@ providers:
                   type: String
                   title: "Output file"
                   description: "Save list of nodes to file (only if 'store' mode selected)"
-                  default: "/var/rundeck/projects/${project.name}/etc/resources.yaml"
+                  default: "/var/lib/rundeck/projects/${project.name}/etc/resources.yaml"
