--- a/rundeck-puppetdb-nodes-plugin/plugin.yaml
+++ b/rundeck-puppetdb-nodes-plugin/plugin.yaml
@@ -1,10 +1,10 @@
 #yaml plugin metadata
 
 name: PuppetDB source
-version: 1.3
+version: 1.4.1
 rundeckPluginVersion: 1.0
-author: Daniel Fernandez (danielfr@cern.ch)
-date: 2016/10/10
+author: Daniel Fernandez (danielfr@cern.ch), David Moreno Garcia (damoreno@cern.ch), Philippe Ganz (phganz@cern.ch)
+date: 2018/08/24
 providers:
         - name: rundeck-puppetdb-nodes
           service: ResourceModelSource
