--- a/rundeck-puppetdb-nodes-plugin/plugin.yaml
+++ b/rundeck-puppetdb-nodes-plugin/plugin.yaml
@@ -3,8 +3,8 @@
 name: PuppetDB source
 version: 1.4.2
 rundeckPluginVersion: 1.0
-author: Daniel Fernandez (daniel.fernandez@cern.ch), David Moreno Garcia (david.mogar@cern.ch), Philippe Ganz (philippe.ganz@cern.ch), Nacho Barrientos Arias (nacho.barrientos@cern.ch)
-date: 2019/09/09
+author: Daniel Fernandez (daniel.fernandez@cern.ch), David Moreno Garcia (david.mogar@cern.ch), Philippe Ganz (philippe.ganz@cern.ch), Nacho Barrientos Arias (nacho.barrientos@cern.ch), Ignacio Coterillo Coz (ignacio.coterillo.coz@cern.ch)
+date: 2021/08/04
 providers:
         - name: rundeck-puppetdb-nodes
           service: ResourceModelSource
