--- a/rundeck-puppetdb-nodes-plugin/plugin.yaml
+++ b/rundeck-puppetdb-nodes-plugin/plugin.yaml
@@ -1,9 +1,9 @@
 #yaml plugin metadata
 
 name: PuppetDB source
-version: 2.1.0
+version: 3.0.0
 rundeckPluginVersion: 1.0
-author: Daniel Fernandez, David Moreno Garcia, Philippe Ganz, Nacho Barrientos Arias (nacho.barrientos@cern.ch), Ignacio Coterillo Coz (ignacio.coterillo.coz@cern.ch)
+author: Daniel Fernandez, David Moreno Garcia, Philippe Ganz, Nacho Barrientos Arias (nacho.barrientos@cern.ch), Ignacio Coterillo Coz (ignacio.coterillo.coz@cern.ch), Steve Traylen (steve.traylen@cern.ch)
 date: 2021/08/04
 providers:
         - name: rundeck-puppetdb-nodes
